--- a/edgebound/src/app/components/cart/cart.component.html
+++ b/edgebound/src/app/components/cart/cart.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
     <div class="breadcrumb">
         <div class="breadcrumb-path">
@@ -26,5 +27,6 @@
         </div>
     </div>
 </main>
+<app-footer></app-footer>
 
 
