--- a/edgebound/src/app/components/dashboard/dashboard.component.html
+++ b/edgebound/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
     <section class="login-container">
         <div class="breadcrumb">
@@ -40,7 +41,7 @@
                         <a routerLink="/recover">olvidé mi contraseña</a>
                     </div>
                     <div class="login-submit">
-                        <button type="submit">ENTRAR</button>
+                        <a routerLink="/dashboard-logged"> <button type="submit">ENTRAR</button></a>
                     </div>
                 </form>
             </div>  
@@ -51,3 +52,4 @@
 
 
 </main>
+<app-footer></app-footer>
