--- a/edgebound/src/app/components/footer-links/envios/envios.component.html
+++ b/edgebound/src/app/components/footer-links/envios/envios.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
   <div class="breadcrumb">
     <div class="breadcrumb-path">
@@ -95,3 +96,5 @@
 
 
 </main>
+<app-footer></app-footer>
+
