--- a/edgebound/src/app/components/footer-links/faq/faq.component.html
+++ b/edgebound/src/app/components/footer-links/faq/faq.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
   <div class="breadcrumb">
     <div class="breadcrumb-path">
@@ -24,74 +25,117 @@
   <div class="separator"></div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item1">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Qué datos requiero para crear una cuenta?</p>
+        <label for="item1"><p>+¿Qué datos requiero para crear una cuenta?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>Los datos que se requieren para el registro son:</p><p>Nombre completo, Género, Fecha de nacimiento, Correo Electrónico y Contraseña.</p><p>La información está debidamente protegida y en ningún caso será utilizada para otros fines que no sean los establecidos en el Aviso de privacidad.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item2">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Cuál es el tiempo de entrega de un pedido?</p>
+        <label for="item2"><p>+¿Cuál es el tiempo de entrega de un pedido?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>Una vez confirmada tu compra recibirás un correo con la fecha tentativa de entrega. Esta estimación de tiempo dependerá de la ciudad y código postal. La entrega de tu pedido para CDMX y Zona Metropolitana será en un periodo de 2 a 4 días hábiles posteriores a la confirmación y validación del pago de tu pedido, y de hasta 8 días hábiles para el Interior de la República Mexicana. El tiempo de entrega para los pedidos confirmados durante el fin de semana o después de las 19 hrs. tiempo del centro, se tomará a partir del día laboral siguiente. Los días sábado y domingo, así como días festivos, no se consideran como días hábiles.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item3">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Cuál es el costo de envío?</p>
+        <label for="item3"> <p>+¿Cuál es el costo de envío?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>- El costo de envío solo aplica para la tienda On line en www.llanodelatorre.com.mx</p><p>- El costo de envío de nuestros productos en CDMX y Zona Metropolitana es gratis en compras iguales o superiores a $900.00 MXN con entrega estándar de 2 a 4 días hábiles.</p><p>- Si el monto de tu pedido es menor a $900 MXN, el costo del envío será de $190.00 mxn en CDMX y Zona Metropolitana.</p><p>- Para entregas fuera de CDMX y Zona Metropolitana se cotizará por separado a través de contacto On-line (Tels. 55 69 65 48 61 y 55 40 00 13 19) para determinar el monto del envío de acuerdo con las características de peso, volumen y destino.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item4">
+
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Cómo puedo obtener envío gratis?</p>
+        <label for="item4"><p>+¿Cómo puedo obtener envío gratis?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>- Para que tus envíos sean totalmente gratis, todas tus compras deben ser iguales o superiores a $900.00 MXN por cada pedido en CDMX y Zona Metropolitana.</p><p>- Solo aplica en tienda On line www.llanodelatorre.com.mx</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item5">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Existen Excepciones de entrega?</p>
+        <label for="item5"><p>+¿Existen Excepciones de entrega?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>- El servicio de entrega a domicilio puedo no estar disponible en todas las zonas geográficas. En caso de que la paquetera considere la localidad de entrega como “Remota, Foránea o de Alta Riesgo” existe la posibilidad de que el pedido no se entregue a domicilio. En estos casos es necesario que el cliente acuda a la sucursal más cercana a su domicilio con la finalidad de reclamar el pedido, es importante que el cliente acuda a la sucursal con identificación oficial y código de rastreo.</p><p>- Las entregas de producto se hacen en PB.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item6">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Cuáles son las formas de pago?</p>
+        <label for="item6"><p>+¿Cuáles son las formas de pago?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>Para tu comodidad, ponemos a tu disposición el Pago vía Mercado Pago y PayPal en nuestra tienda on-line.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item7">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Cómo puedo saber el estatus de mi pedido?</p>
+        <label for="item7"><p>+¿Cómo puedo saber el estatus de mi pedido?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>Desde la opción “MIS PEDIDOS” de tu CUENTA en llanodelatorre.com.mx/tienda puedes consultar el estatus de tu pedido. Además, cada actualización que se realice te será notificado vía correo electrónico. Si existiera un cambio extraordinario en tu pedido te contactaremos vía telefónica.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item8">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Qué hago si mi producto no llega?</p>
+        <label for="item8"><p>+¿Qué hago si mi producto no llega?</p></label>
       </div>
+    </div>
+    <div class="acordeon_contenido">
+      <p>Si ya han pasado los días establecidos de acuerdo con nuestras políticas de tiempo de entrega y tu producto aún no ha llegado, puedes comunicarte con alguno de nuestros ejecutivos a contacto On-line Tels. 55 69 65 48 61 y 55 40 00 13 19 en un horario de 9:00 am a 7:00 pm de lunes a viernes y sábados de 9:00 am a 5:00 pm.</p>
     </div>
   </div>
 
   <div class="faqContainer">
+    <input type="checkbox" name="acordeon" id="item9">
     <div class="questionAnswer">
       <div class="question">
-        <p>+¿Es seguro comprar en llanodelatorre.com.mx?</p>
-      </div>
+        <label for="item9"><p>+¿Es seguro comprar en llanodelatorre?</p></label>
     </div>
   </div>
+  <div class="acordeon_contenido">
+    <p>Grupo Llano de la Torre es una empresa 100% mexicana y estamos comprometidos contigo, por lo que contamos con todos los estándares de calidad para brindar a nuestros clientes la confianza y seguridad de comprar en línea</p>
+  </div>
+  </div>
+
+
+
+  
+
 </main>
+<app-footer></app-footer>
