--- a/edgebound/src/app/components/footer-links/terminos/terminos.component.html
+++ b/edgebound/src/app/components/footer-links/terminos/terminos.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
   <div class="breadcrumb">
     <div class="breadcrumb-path">
@@ -103,3 +104,4 @@
   </div>
 
 </main>
+<app-footer></app-footer>
