--- a/edgebound/src/app/components/home/home.component.html
+++ b/edgebound/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- oculto en pantalla mas chicas que lg -->
+<app-navbar></app-navbar>
 <main>
   <div class="breadcrumb">
     <div class="breadcrumb-path">
@@ -124,28 +124,46 @@
     </button>
   </div>
   <!-- carousel mob tablet de ofertas 1 -->
-<div class="carousel carousel-promo-mob" data-flickity='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
-  <div class="carousel-cell">
-    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/american_400x400.png"
-        alt="">
+<div class="scrolling-wrapper carousel-promo-mob carousel-home">
+  <div class="card-mob">
+    <div class="img-home">
+              <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/american_400x400.png"
+              alt="">
+    </div>
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/tekaway_400x400.jpg"
-        alt="">
+  <div class="card-mob">
+    <div class="img-home">
+      <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/urrea-906.27-400x400.jpg"
+      alt="">
+    </div>
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/urrea_400x400.png"
+  <div class="card-mob">
+    <div class="img-home">
+      <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/tekaway_400x400.jpg"
         alt="">
+    </div>
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/urrea_400x400.png"
+  <div class="card-mob">
+    <div class="img-home">
+      <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/urrea_400x400.png"
+      alt="">
+    </div>
+  </div>
+  <div class="card-mob">
+    <div class="img-home">
+      <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/paquete-dubai-400x400.jpg"
     alt="">
+    </div>
   </div>
-  <div class="carousel-cell">
-    <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/400x400_CUATRO.jpg"
+  <div class="card-mob">
+    <div class="img-home">
+      <img src="https://s3.amazonaws.com/llanomx.wcaas.media/espots/home-promo-slider/400x400_CUATRO.jpg"
     alt="">
+    </div>
   </div>
+  
 </div>
+
 
   <!-- BANNER GRANDE Y VIDEO DE YOUTUBE -->
   <div class="banner-youtube">
@@ -336,8 +354,8 @@
 
   </div>
   <!-- promos 2 mob-tab -->
-  <div class="carousel carousel-promo-mob" data-flickity='{ "freeScroll": true, "contain": true, "prevNextButtons": false, "pageDots": false }'>
-    <div class="carousel-cell">
+  <div class="scrolling-wrapper carousel-promo-mob">
+    <div class="card-mob">
       <div>
         <div class="slider-item">
           <div>
@@ -351,20 +369,34 @@
         </div>
       </div>
     </div>
-    <div class="carousel-cell">
-      <div><div class="slider-item"><div><picture><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.webp" type="image/webp"><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.jp2" type="image/jp2"><img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.jpg" alt="6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO"></picture><div><b class="">$770.63</b></div><p>6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO</p></div></div></div>
+    <div class="card-mob">
+      <div><div class="slider-item">
+        <div>
+          <picture>
+            <source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.webp" type="image/webp">
+              <source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.jp2" type="image/jp2"><img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.66/444.66_1_400x400.jpg" alt="6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO"></picture><div><b class="">$770.63</b></div><p>6070023MX.002 PORTA PAPEL SEMIEMPOT INST CROMO</p></div></div></div>
     </div>
-    <div class="carousel-cell">
+    <div class="card-mob">
       <div><div class="slider-item"><div><picture><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/72.206/72.206_1_400x400.webp" type="image/webp"><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/72.206/72.206_1_400x400.jp2" type="image/jp2"><img src="https://s3.amazonaws.com/llanomx.wcaas.media/72.206/72.206_1_400x400.jpg" alt="JUEGO DE MANERALES T6193BL SAL- P/LAV. NEGRO MATTE"></picture><div><b class="">$6,372.45</b></div><p>JUEGO DE MANERALES T6193BL SAL- P/LAV. NEGRO MATTE</p></div></div></div>
     </div>
-    <div class="carousel-cell">
+    <div class="card-mob">
       <div><div class="slider-item"><div><picture><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/1.126/1.126_1_400x400.webp" type="image/webp"><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/1.126/1.126_1_400x400.jp2" type="image/jp2"><img src="https://s3.amazonaws.com/llanomx.wcaas.media/1.126/1.126_1_400x400.jpg" alt="AZULEJO ETANA 20X30 HUESO 1.52 1A"></picture><div><b class="">$180.46</b></div><p>6070023MX AZULEJO ETANA 20X30 HUESO 1.52 1A</p></div></div></div>
     </div>
-    <div class="carousel-cell">
-      <div><div class="slider-item"><div><picture><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/444.2085/444.2085_1_400x400.webp" type="image/webp"><source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/444.2085/444.2085_1_400x400.jp2" type="image/jp2"><img src="https://s3.amazonaws.com/llanomx.wcaas.media/444.2085/444.2085_1_400x400.jpg" alt="1660604MX.002 REGADERA FLUENT CROMO"></picture><div><b class="">$1,612.03</b></div><p>1660604MX.002 REGADERA FLUENT CROMO</p></div></div></div>
+        <div class="card-mob">
+      <div class="slider-item">
+        <div>
+          <picture>
+            <source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/36.109/36.109_1_400x400.webp" type="image/webp">
+            <source srcset="https://s3.amazonaws.com/llanomx.wcaas.media/36.109/36.109_1_400x400.jp2" type="image/jp2">
+            <img src="https://s3.amazonaws.com/llanomx.wcaas.media/36.109/36.109_1_400x400.jpg" alt="FREGADERO 8821022 (08131022) 1C 2PERF. 381.381"></picture>
+          <div>
+            <b class="">$771.38</b>
+          </div>
+          <p>FREGADERO 8821022 (08131022) <br> 1C 2PERF. 381.381</p>
+        </div>
+      </div>
     </div>
   </div>
-
 
   <!-- BANNER -->
   <div class="banner-single">
@@ -392,22 +424,50 @@
   <!-- INPUT DE MENSAJE -->
   <div class="newsletter">
     <div class="newsletter-container">
-      <form class="newsletter-form">
+      <div class="newsletter-form">
         <p>¡Recibe noticias sobre promociones especiales!</p>
         <div>
           <label>
             <input type="email" placeholder="correo electrónico" value="">
             <i class="material-icons-outlined">email</i>
           </label>
-          <button>
+          <button (click)="showNotification()">
             <i class="material-icons">send</i>
           </button>
         </div>
-      </form>
+      </div>
     </div>
   </div>
 
 
+  <div class="bot-container">
+  <div class="box-message">
+    <div class="row box-title">
+      <div class="col-10">
+        <p>¿Tienes preguntas?</p>
+      </div>
+      <div class="col-2">
+        <span (click)="hide()">✖</span> 
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 click-text">Haga clic aquí para chatear con nosotros</div>
+    </div>
+  </div>
+    <div class="bot-footer-container">
+      <div class="meshim_widget_widgets_IconFont " style="user-select: none;">💬</div>
+      <label class="conect" for="">Conectado</label>
+      <label class="line" for="">-</label>
+      <label class="conect-text" for="">Lo invitamos a que Chatee</label>
+    </div>
+  </div>
+
+  
+  <div class="notification">
+    <div class="notification--container bg--green"><i class="material-icons ">done</i><div><p>¡Gracias por suscribirte!</p></div><button (click)="close()"><i class="material-icons ">close</i></button></div>
+  </div>
+  
 </main>
+<app-footer></app-footer>
 
 
