--- a/edgebound/src/app/components/footer-links/contacto/contacto.component.html
+++ b/edgebound/src/app/components/footer-links/contacto/contacto.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
     <div class="breadcrumb">
         <div class="breadcrumb-path">
@@ -58,3 +59,4 @@
           </div>
       </div>
 </main>
+<app-footer></app-footer>
