--- a/edgebound/src/app/components/footer-links/mayoreo/mayoreo.component.html
+++ b/edgebound/src/app/components/footer-links/mayoreo/mayoreo.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
   <div class="breadcrumb">
     <div class="breadcrumb-path">
@@ -59,3 +60,4 @@
 
 
 </main>
+<app-footer></app-footer>
