--- a/edgebound/src/app/components/footer-links/quienes-somos/quienes-somos.component.html
+++ b/edgebound/src/app/components/footer-links/quienes-somos/quienes-somos.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
     <div class="breadcrumb">
         <div class="breadcrumb-path">
@@ -35,3 +36,4 @@
 
     </div>
 </main>
+<app-footer></app-footer>
